# BatterySimulator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
batsim/batsim/: Cargo.toml  main.rs  utils.rs
batsim/batsim/commands/: dryrun.rs  mod.rs  optimise.rs  peek.rs  run.rs  trace.rs
batsim/batsim/tests/data/: expected_traces.json  simple_json_file.json
batsim/configuration/: Cargo.toml
batsim/configuration/src/: charge_plan.rs  commands.rs  config.rs  filter.rs  filters.rs  group.rs  handler.rs  lib.rs  sampler.rs  utils.rs
batsim/configuration/src/groups/: activity.rs  battery.rs  en_route.rs  mod.rs  trigger.rs
batsim/optimise/: Cargo.toml
batsim/optimise/src/: handler.rs  lib.rs  run.rs
batsim/peek/: Cargo.toml
batsim/peek/src/: attributes.rs  errors.rs  lib.rs  peekset.rs
batsim/simulate/: Cargo.toml
batsim/simulate/src/: battery.rs  days.rs  events.rs  lib.rs  record.rs  results.rs  scoring.rs  sim.rs
batsim/tracer/: Cargo.toml
batsim/tracer/benches/: tracer.rs
batsim/tracer/src/: events.rs  handler.rs  lib.rs  network.rs  population.rs
batsim/xml/: Cargo.toml
batsim/xml/src/: lib.rs
configs/: example.yaml  simple.yaml
demos/london/: README.md  run.sh  scenario_high_ev.yaml  scenario_high_ev_high_inequality.yaml  scenario_low_ev.yaml
demos/london/data/: traces.json
demos/simulation_0/: README.md  run.sh  scenario_a.yaml  scenario_b.yaml  scenario_c.yaml
docs/: CONFIG_README.md
scripts/: lint.sh
