[package]
name = "configuration"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracer = { path = "../tracer" }
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.147", features = ["derive"] }
anyhow = "1.0.70"
serde_yaml = "0.9.19"
thiserror = "1.0.40"
