[package]
name = "simulate"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configuration = { path = "../configuration" }
tracer = { path = "../tracer" }
derive = "1.0.0"
f = "0.2.0"
indicatif = "0.17.3"
serde = { version = "1.0.159", features = ["derive"] }
