[package]
name = "tracer"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml = { path = "../xml", version = "0.0.1" }
anyhow = "1.0.70"
quick-xml = "0.28.1"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.87"
itertools = "0.10.5"
thiserror = "1.0.40"
bincode = "1.3.3"
tempfile = "3.5.0"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "tracer"
harness = false
